--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ bower.json
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+.idea/
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
